--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,6 @@ trash/
 pyxrr/build/
 pyxrr/pyxrr/*.pyc
 pyxrr/contrib/Current_Model.param
+pyxrr/contrib/.addGUIlanguage.py
 pyxrr/contrib/tmp/*.save
 .gitignore
