some bugs fixed

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ pyxrr/pyxrr/*.pyc
 pyxrr/contrib/Current_Model.param
 pyxrr/contrib/pygettext.py
 pyxrr/contrib/tmp/*.save
+pyxrr/contrib/samples/STO*
+.gitignore
