--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,5 @@ pyxrr/contrib/Current_Model.param
 pyxrr/contrib/pygettext.py
 pyxrr/contrib/tmp/*.save
 pyxrr/contrib/samples/STO*
+pyxrr/contrib/results/STO*
 .gitignore
